--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body class="bg-light">
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">SimpleTODO</a>
@@ -30,7 +29,8 @@
                     <input class="form-control me-2" name="password" autocomplete="current-password" type="password"
                         placeholder="Password" aria-label="Password">
                     <button id="app-login-btn" class="btn btn-outline-info" type="submit">Sign In</button>
-                    <button id="app-out-btn" class="btn btn-outline-info" type="button" style="display: none;">Sign Out</button>
+                    <button id="app-out-btn" class="btn btn-outline-info" type="button" style="display: none;">Sign
+                        Out</button>
                 </form>
             </div>
         </div>
@@ -38,8 +38,6 @@
     <div class="container container-board">
         <p id="content">Please Sign In to see your tasks!</p>
     </div>
-
-
 </body>
 
 </html>
